--- a/MyBlog.App/MyBlog.App.csproj
+++ b/MyBlog.App/MyBlog.App.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MyBlog.BusinesLogic\MyBlog.BusinesLogic.csproj" />
     <ProjectReference Include="..\MyBlog.Data\MyBlog.Data.csproj" />
   </ItemGroup>
 
