Добавлены бизнес-модели данных Подключен автомаппер

--- a/MyBlog.BusinesLogic/MyBlog.BusinesLogic.csproj
+++ b/MyBlog.BusinesLogic/MyBlog.BusinesLogic.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MyBlog.Data\MyBlog.Data.csproj" />
+  </ItemGroup>
+
 </Project>
