--- a/MyBlog.Data/MyBlog.Data.csproj
+++ b/MyBlog.Data/MyBlog.Data.csproj
@@ -20,4 +20,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Database\data.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
