--- a/MyBlog.App/MyBlog.App.csproj
+++ b/MyBlog.App/MyBlog.App.csproj
@@ -15,10 +15,17 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.4" />
+    <PackageReference Include="NLog" Version="5.1.4" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MyBlog.Services\MyBlog.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
