--- a/MyBlog.Api/appsettings.json
+++ b/MyBlog.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=../MyBLog.Data/Database/data.db;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
